# python-adapter-for-auth.js

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  rest-adapter.ts
.github/workflows/: test.yml
auth/: adapters.py  models.py  router.py  schemas.py
tests/: conftest.py  test_e2e.py  test_integration.py
